--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,7 +1,12 @@
 en:
+  common_button:
+    submit: "Submit"
   items: 
     edit:
       title: "Title"
+      description: "Description"
+      select_files: "Click to select file"
+      add_contact_for_item: "Add contact for this item"
   date:
     abbr_day_names:
     - Sun
