--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -7,6 +7,8 @@
 # Emended by Benjamin des Gachons and Patrick Chew : <http://www.fitima.org/docs/fiche.pdf>
 
 fr:
+  common_sentence:
+    confirm_delete: "Etes vous sur ?"
   common_button:
     submit: "Valider"
   items:
@@ -15,6 +17,15 @@ fr:
       description: "Description"
       select_files: "Cliquer ici pour selectionner un fichier"
       add_contact_for_item: "Ajouter un contact pour cette objet"
+  contacts:
+    index:
+      assoc_contact: "Associer à ce contact"
+      lastname: "Nom"
+      firstname: "Prénom"
+      to_edit: "Edition"
+      to_destroy: "Suppression"
+      edit: "Editer"
+      destroy: "Supprimer"
   date:
     formats:
       default: "%d/%m/%Y"
