--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -9,6 +9,7 @@
 fr:
   items:
     new_item: "Nouvelle objet"
+    items_list: "Liste des objets"
     edit:
       title: "Titre"
       description: "Description"
