update version kukariri backbonejs

--- a/config/locales/common_sentence.en.yml
+++ b/config/locales/common_sentence.en.yml
@@ -1,3 +1,7 @@
 en:
   common_sentence:
     confirm_delete: "Are you sure ?"
+    edit: "Editing"
+    removable: "Removable"
+    edit: "Edit"
+    delete: "Destroy"
