--- a/config/locales/activerecord.en.yml
+++ b/config/locales/activerecord.en.yml
@@ -18,6 +18,7 @@ en:
         tel_mobil: "The mobil Phone"
         adress: "The address"
         country: "The country"
+        region: "The region"
         user_id: "The user id"
       item:
         title: "Title"
@@ -28,7 +29,9 @@ en:
       notification:
         date_at: "Date at"
         user_id: "Id user"
-      picture: 
+      regions:
+        region: "The region"
+      picture:
         picture: "Picture"
         item_id: "Item id"
         type_id: "Type id"
